@startuml

title __KEYLISTENERS's Class Diagram__\n

  namespace  {
    namespace eylisteners {
      class keylisteners.GameEventListener {
          + GameEventListener()
          + keyPressed()
      }
    }
  }
  

  namespace  {
    namespace eylisteners {
      class keylisteners.PauseEventListener {
          + PauseEventListener()
          + keyPressed()
          + keyReleased()
      }
    }
  }
  

  keylisteners.GameEventListener -up-|> java.awt.event.KeyAdapter
  keylisteners.GameEventListener o-- ui.GamePanel : gamePanel
  keylisteners.PauseEventListener -up-|> java.awt.event.KeyAdapter
  keylisteners.PauseEventListener o-- ui.PausePanel : board


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
